--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Ahmad
 middle_name:
 last_name: Khan
-email: mukhan2@hbku.edu.qa
+email: ahkhan@student.ethz.ch
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   My personal webpage. Based on [*ai-folio](https://github.com/alshedivat/al-folio)
 footer_text: >
